fixed height on mobile Home page

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -34,7 +34,7 @@ body {
 
 @media (max-width: 700px) {
   body {
-    height: 1800px;
+    height: 2700px;
     width: 100vw;
   }
 
